@@ -2,3 +2,4 @@
 editor_indent_tab: 1
 editor_indent_tab_width: 8
 editor_indent_width: 8
+config_perltidy: ../tools/perltidyrc
